K8s_deployments/dinossaur_browser/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dino-game-service
  namespace: mydino
spec:
  selector:
    app: dino-game
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: ClusterIP
