K8s_deployments/dinossaur_browser/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: t-rex-ingress
  namespace: mydino
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: localhost # Change to your domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dino-game-service
            port:
              number: 8080
